Pallino blu su trattamento in corso

--- a/index.html
+++ b/index.html
@@ -681,8 +681,11 @@
                 	<svg viewBox="0 0 12 48"><polygon points="5,24 12,13 12,35"></polygon></svg>
                     <i>{{TXT_ElGestionale}}</i></div>
                 <div id="p_agenda" onClick="MENU.visAgenda();">
+                    <span id="notificaAgenda"></span>
                 	<svg viewBox="0 0 12 48"><polygon points="5,24 12,13 12,35"></polygon></svg>
-                	<i>{{TXT_Agenda}}</i></div>
+                	<i>{{TXT_Agenda}}</i>
+                </div>
+                    
                 <div id="p_ricerca" onClick="RICERCHE.historyGlobal();">
                 	<svg viewBox="0 0 12 48"><polygon points="5,24 12,13 12,35"></polygon></svg>
                     <i>{{TXT_Ricerca}}</i></div>
