Nuova sezione annotazioni

--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
                         	<div id="lista_pazienti"></div>
                         	<div id="lista_fornitori"></div>
                         	<div id="lista_servizi"></div>
+                        	<div id="lista_annotazioni"></div>
                         	<div id="requestPwd">
                             	<span>{{TXT_PatientPwdConfirm}}</span>
                                 <input type="text" id="patientPwdRequest">
@@ -292,6 +293,7 @@
                         	<div id="pulsante_servizi" class="frdx" onClick="SCHEDA.selElenco('servizi');">{{TXT_ElServizi}}</div>
                             <span class="separatorePulsanti"></span>
                         	<div id="pulsante_file" class="frdx" onClick="PH.car_gallery();">{{TXT_ElFiles}}</div>
+                        	<div id="pulsante_annotazioni" class="frdx" onClick="SCHEDA.selElenco('annotazioni');">{{TXT_ElNote}}</div>
                         </div>
                     </div>
 				</div>
