Cambio modalità schede su smartphone

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     
                     <div id="scheda_intestazione">
                     	<div id="scheda_back" onClick="SCHEDA.riapriMenu();"></div>
-                    	<div id="scheda_ritorno" onDblClick="SCHEDA.minimizzaScheda();" onMouseDown="SCHEDA.iniziaMoveScheda(event,true);" onTouchStart="SCHEDA.iniziaMoveScheda(event,true);">
+                    	<div id="scheda_ritorno" onDblClick="SCHEDA.minimizzaScheda();" onMouseDown="SCHEDA.iniziaMoveScheda(event,true,true);" onTouchStart="SCHEDA.iniziaMoveScheda(event,true,true);">
 						<svg viewBox="0 0 32 32">
 							<line x1="19" x2="13" y1="10" y2="16"></line>
 							<line x1="19" x2="13" y1="22" y2="16"></line>
