--- a/index.html
+++ b/index.html
@@ -261,10 +261,28 @@
             </div> -->
             
 			<div id="elenchi"> <!-- MENU CONTENUTI -->
+            	<div id="elenchi_linguette">
+                	<div id="ec" class="lll" onClick="SCHEDA.chiudiElenco();">
+                        <svg viewBox="0 0 32 32">
+                            <line x1="10" x2="22" y1="7" y2="19"></line>
+                            <line x1="10" x2="22" y1="19" y2="7"></line>
+                        </svg>
+                    </div>
+                	<div id="es" class="lll"
+                    	 onMouseDown="SCHEDA.iniziaMoveScheda(event);"
+                         onTouchStart="SCHEDA.iniziaMoveScheda(event);">
+                        <svg viewBox="0 0 32 26">
+                            <line x1="7" x2="16" y1="12" y2="8"></line>
+                            <line x1="16" x2="25" y1="8" y2="12"></line>
+                            <line x1="7" x2="16" y1="17" y2="21"></line>
+                            <line x1="16" x2="25" y1="21" y2="17"></line>
+                        </svg>
+                    </div>
+                </div>
 				<div id="elenchi_cont">
 					<div id="elenchi_testa">
                         <div id="chiudiElenco" onClick="SCHEDA.chiudiElenco();"></div>
-                        <div id="elenchi_titolo" onClick="SCHEDA.swPulsanti();"></div>
+                        <div id="elenchi_titolo"><span id="elenchi_titolo_freccia" onClick="SCHEDA.swPulsanti();"></span><span id="elenchi_titolo_txt"></span></div>
                     </div>
 					<div id="elenchi_lista">
                     	<div id="lista_base">
