Aggiunto tooltip su slider livelli anatomia

--- a/index.html
+++ b/index.html
@@ -693,6 +693,7 @@
                 <div id="p_rifletti" onClick="MODELLO.rifletti();" title="{{TXT_RiflettiModello}}"></div>
             </div>
             <div id="sliderAnatomia"><div class="slider"><div></div></div></div>
+            <div id="ttAnatomia"></div>
                 
             <div id="icone"
             	 class="iconeEspanse"
