--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 				<div id="elenchi_cont">
 					<div id="elenchi_testa">
                         <div id="chiudiElenco" onClick="SCHEDA.chiudiElenco();"></div>
-                        <div id="elenchi_titolo"><span id="elenchi_titolo_freccia" onClick="SCHEDA.swPulsanti();"></span><span id="elenchi_titolo_txt"
+                        <div id="elenchi_titolo"><span id="elenchi_titolo_freccia" onClick="SCHEDA.swPulsanti();"><i>{{TXT_AltriArchivi}}</i></span><span id="elenchi_titolo_txt"
                         onMouseDown="SCHEDA.iniziaMoveScheda(event);"
                         onTouchStart="SCHEDA.iniziaMoveScheda(event);"></span></div>
                     </div>
@@ -306,11 +306,13 @@
                                             onTouchStart="SCHEDA.iniziaMoveScheda(event);">{{TXT_ElGestionale}}</span></span>
                             <span id="descrizione_base">{{TXT_GuidaPazientiTxt}}</span>
                         	<div id="pulsante_pazienti" class="frdx" onClick="SCHEDA.selElenco('pazienti');">{{TXT_ElPazienti}}</div>
+                            <span class="separatorePulsanti"></span>
+                        	<i id="label_altri_archivi">{{TXT_AltriArchivi}}</i>
                         	<div id="pulsante_fornitori" class="frdx" onClick="SCHEDA.selElenco('fornitori');">{{TXT_ElFornitori}}</div>
                         	<div id="pulsante_servizi" class="frdx" onClick="SCHEDA.selElenco('servizi');">{{TXT_ElServizi}}</div>
+                        	<div id="pulsante_annotazioni" class="frdx" onClick="SCHEDA.selElenco('annotazioni');">{{TXT_ElNote}}</div>
                             <span class="separatorePulsanti"></span>
                         	<div id="pulsante_file" class="frdx" onClick="PH.car_gallery();">{{TXT_ElFiles}}</div>
-                        	<div id="pulsante_annotazioni" class="frdx" onClick="SCHEDA.selElenco('annotazioni');">{{TXT_ElNote}}</div>
                         </div>
                     </div>
 				</div>
@@ -680,7 +682,7 @@
                 <!--<div id="p_piuma" class="p_noTxt" onClick="swAnimate();">
                     <i>{{TXT_Pausa3D}}</i></div>-->
                 <div id="btns_set"></div>
-                <div id="p_centro" onClick="centro();" title="{{TXT_CentraModello}}"></div>
+                <div id="p_centro" onClick="centro();" title="{{TXT_CentraModello}}"><i>{{TXT_Centra}}</i></div>
                 <div id="p_selected" onClick="MENU.visSelected();" title="{{TXT_ElementiSelezionati}}"></div>
                 <div id="p_pins" onClick="MODELLO.swPins();" title="{{TXT_MostraPin}}"></div>
                 <div id="p_rifletti" onClick="MODELLO.rifletti();" title="{{TXT_RiflettiModello}}"></div>
