--- a/index.html
+++ b/index.html
@@ -730,9 +730,11 @@
             <div id="p_impostazioniAM" onClick="MENU.visImpostazioni();"></div>
                 
             <div id="pulsanti_modello"> <!-- MENU ANATOMIA -->
+            	<div id="btnsModello"></div>
             	<div id="labelModello">
+                	<div id="label_modello_smart"></div>
                 	{{TXT_Anatomy}}
-                	<div id="chiudi_modello" onClick="MENU.visModello();"></div>
+                	<div id="chiudi_modello" onClick="MENU.visModello()"></div>
                 	<div id="help_modello" onClick="GUIDA.visFumetto('guida_anatomia',true)">?</div>
                 </div>
             	<div id="p1">
