--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                 <div id="p_cartella" onClick="SCHEDA.apriElenco('base',true);">
                 	<span id="ico_cliente"><i></i></span>
                 	<svg viewBox="0 0 12 48"><polygon points="5,24 12,13 12,35"></polygon></svg>
-                    <i>{{TXT_ElGestionale}}</i></div>
+                    <i>{{TXT_ElPazienti}}</i></div>
                 <div id="p_agenda" onClick="MENU.visAgenda();">
                     <span id="notificaAgenda"></span>
                 	<svg viewBox="0 0 12 48"><polygon points="5,24 12,13 12,35"></polygon></svg>
