--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                   onMouseDown="SCHEDA.iniziaMoveScheda(event);"
                                   onTouchStart="SCHEDA.iniziaMoveScheda(event);"></span>
                             <span class="elMenu" id="impostazioniArchivi"
-                                  onClick="MENU.visImpset(true);"></span>
+                                  onClick="MENU.visImpset(SCHEDA.elencoSel=='pazienti'?true:false);"></span>
                         </div>
                     </div>
 					<div id="elenchi_lista">
