Inserito sistema di ratings

--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                 {{TXT_VersioneNumero}} <span id="verApp_imp"></span>
                 <br>
                 <br>
-               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza, Luca Doglione | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Roman Henry Clarke, Daniela Borghese | <i>{{TXT_VersioneSpagnola}}:</i> Celia Guadalupe Garza Rosas | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Zion Levy, Antonello Lovato, Elisa Iallonardi, Laura Lucchino, Nicola Revello, Giorgio Eugenio Bertani, Carmelo Perlongo, Daglas Gattini, Roberto Taverna, Antoine Di Novi.
+               <i>{{TXT_IdeazioneProgetto}}:</i> Christian Iallonardi, Luca Doglione | <i>{{TXT_SviluppoContenuti}}:</i> Vittorio Piacenza, Luca Doglione | <i>Software:</i> Christian Iallonardi, Denny Biasiolli | <i>{{TXT_DisegniModellazione}}:</i> Christian Iallonardi | <i>{{TXT_ComunicazioneTesting}}:</i> Luca Doglione | <i>{{TXT_VersioneInglese}}:</i> Roman Henry Clarke, Daniela Borghese | <i>{{TXT_VersioneSpagnola}}:</i> Celia Guadalupe Garza Rosas | <i>{{TXT_Collaboratori}}:</i> Roberto Federico Crispo, Zion Levy, Antonello Lovato, Elisa Iallonardi, Laura Lucchino, Nicola Revello, Giorgio Eugenio Bertani, Carmelo Perlongo, Daglas Gattini, Roberto Taverna, Antoine Di Novi, Maurizio Repetto.
                 <br>
                 <br>
                 <br>
@@ -887,7 +887,7 @@
                     <div id="chiudiAppRating" onClick="APP_RATING.nas();"></div>
                     <div id="app_rating_int">
                         <h2>{{TXT_PiaceIaomai}}</h2>
-                        <div id="app_rating_faces"></div>
+                        <div id="app_rating_faces" onClick="APP_RATING.rate();"></div>
                         <p id="app_rating_txt">Tocca per votare nell'AppStore</p>
                         <div id="app_rating_btns">
                             <div class="submitBtn" onClick="APP_RATING.rate();">{{TXT_VotaOra}}</div>
