Ampliato il modulo di registrazione

--- a/index.html
+++ b/index.html
@@ -506,6 +506,76 @@
                             	   placeholder="Password"
                             	   autocomplete="off">
                         </div>
+
+                        <div class="labelReg">Dati anagrafici</div>
+                    	<div>
+                        	<input type="text"
+                            	   name="Indirizzo"
+                            	   id="@|Indirizzo|1|0"
+                            	   placeholder="Indirizzo"
+                            	   autocomplete="off"
+                            	   autocorrect="off"
+                            	   autocapitalize="off"
+                            	   spellcheck="false">
+                        </div>
+                    	<div>
+                        	<input type="text"
+                            	   name="CAP"
+                            	   id="@|{{TXT_CAP}}|1|0"
+                            	   placeholder="{{TXT_CAP}}"
+                            	   autocomplete="off"
+                            	   autocorrect="off"
+                            	   autocapitalize="off"
+                            	   spellcheck="false">
+                        </div>
+                    	<div>
+                        	<input type="text"
+                            	   name="Citta"
+                            	   id="@|{{TXT_Citta}}|1|0"
+                            	   placeholder="{{TXT_Citta}}"
+                            	   autocomplete="off"
+                            	   autocorrect="off"
+                            	   autocapitalize="off"
+                            	   spellcheck="false">
+                        </div>
+                    	<div>
+                        	<input type="text"
+                            	   name="Provincia"
+                            	   id="@|{{TXT_Provincia}}|1|0"
+                            	   placeholder="{{TXT_Provincia}}"
+                            	   autocomplete="off"
+                            	   autocorrect="off"
+                            	   autocapitalize="off"
+                            	   spellcheck="false">
+                        </div>
+                    	<div>
+                        	<select name="StatoRegistrazione"
+                            	    id="paeseRegistrazione"
+                            	    placeholder="Paese"></select>
+                        </div>
+
+                        <div class="labelReg">Info aggiuntive</div>
+                    	<div>
+                        	<input type="text"
+                            	   name="Professione"
+                            	   id="@|{{TXT_Professione}}|1|0"
+                            	   placeholder="{{TXT_Professione}}"
+                            	   autocomplete="off"
+                            	   autocorrect="off"
+                            	   autocapitalize="off"
+                            	   spellcheck="false">
+                        </div>
+                    	<div>
+                        	<input type="text"
+                            	   name="Interessi"
+                            	   id="@|{{TXT_Interessi}}|1|0"
+                            	   placeholder="{{TXT_Interessi}}"
+                            	   autocomplete="off"
+                            	   autocorrect="off"
+                            	   autocapitalize="off"
+                            	   spellcheck="false">
+                        </div>
+
                         <div id="divTrattamentoDati">
                         	<label for="privacy">
                                 <input type="checkbox"
