Aggiunto campo ripeti password aalla registrazione

--- a/index.html
+++ b/index.html
@@ -506,8 +506,15 @@
                             	   placeholder="Password"
                             	   autocomplete="off">
                         </div>
+                        <div>
+                        	<input type="password"
+                            	   name="PWD2"
+                            	   id="@|{{TXT_RipetiPassword}}|5|0"
+                            	   placeholder="{{TXT_RipetiPassword}}"
+                            	   autocomplete="off">
+                        </div>
 
-                        <div class="labelReg">Dati anagrafici</div>
+                        <div class="labelReg">{{TXT_LabelAnagrafici}}</div>
                     	<div>
                         	<input type="text"
                             	   name="Indirizzo"
@@ -554,7 +561,7 @@
                             	    placeholder="Paese"></select>
                         </div>
 
-                        <div class="labelReg">Info aggiuntive</div>
+                        <div class="labelReg">{{TXT_LabelAggiuntive}}</div>
                     	<div>
                         	<input type="text"
                             	   name="Professione"
