Aggiunta gestione popup ADV

--- a/index.html
+++ b/index.html
@@ -734,6 +734,15 @@
             	<div id="labelLicenze" class="popup_label">{{TXT_TueLicenze}}<div class="popup_chiudi" onClick="MENU.chiudiMenu();"></div></div>
             	<div id="contLicenze" class="popup_cont"></div>
             </div>
+            <div id="adv" class="popup"> <!-- ADV -->
+            	<div id="labelAdv" class="popup_label"><div class="popup_chiudi" onClick="ADV.nas();"></div></div>
+            	<div id="contAdv" class="popup_cont">
+                    <div id="txtAdv"></div>
+                    <div id="noAdv">
+                        <input type="checkbox" id="noADV" name="noADV" value="1"> {{TXT_noVisPiu}}
+                    </div>
+                </div>
+            </div>
            	<!---------------------------- fine popups ... -->
             
             
