--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <!--<meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'" />-->
       
       
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, target-densitydpi=medium-dpi, user-scalable=0" />      
         <meta name="apple-mobile-web-app-capable" content="yes">
         <script>
         window.usingCordova = false;
