Integrazione diagnosi AI

--- a/index.html
+++ b/index.html
@@ -743,6 +743,13 @@
                     </div>
                 </div>
             </div>
+            <div id="ai" class="popup"> <!-- AI -->
+            	<div id="labelAI" class="popup_label"><div class="popup_chiudi" onClick="MENU.chiudiMenu();"></div></div>
+            	<div id="contAI" class="popup_cont">
+                    <div id="txtAI"></div>
+                    <div id="btnAI" onClick="PAZIENTI.ai_request();">{{TXT_RequestAI}}</div>
+                </div>
+            </div>
            	<!---------------------------- fine popups ... -->
             
             
