--- a/index.html
+++ b/index.html
@@ -748,6 +748,7 @@
             	<div id="contAI" class="popup_cont">
                     <div id="txtAI"></div>
                     <div id="btnAI" onClick="PAZIENTI.ai_request();">{{TXT_RequestAI}}</div>
+                    <div id="btnAIpurchase" onClick="PAZIENTI.ai_purchase();">{{TXT_PurchaseAI}}</div>
                 </div>
             </div>
            	<!---------------------------- fine popups ... -->
