Aggiornamento versione con gestione Schede di valutazione

--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
             	<div id="labelAI" class="popup_label"><div class="popup_chiudi" onClick="MENU.chiudiMenu();"></div></div>
             	<div id="contAI" class="popup_cont">
                     <div id="txtAI"></div>
-                    <div id="btnAI" onClick="AI.request();">{{TXT_RequestAI}}</div>
+                    <div><span id="cont_selectAI"></span><div id="btnAI" onClick="AI.request();">{{TXT_RequestAI}}</div></div>
                     <div id="btnAIpurchase" onClick="AI.purchase();">{{TXT_PurchaseAI}}</div>
                 </div>
             </div>
